# entity-relationship-diagram-editor

./: README.md  uml-diagram.json
src/: entityBoard.py  main.py
src/guiElements/src/: setup.cfg
src/guiElements/src/inputs/: label.py
