[metadata]
name = guiElements
version = 1.0.0
author = Ricardo Quintela Dev
description = A package to create pygame apps with ease
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src